docs/v0.10/_sources/tutorials/api/phasorpy_filter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "tutorials/api/phasorpy_filter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: xml

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_tutorials_api_phasorpy_filter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_tutorials_api_phasorpy_filter.py:


Filter phasor coordinates
=========================

Functions for filtering phasor coordinates.

Filtering phasor coordinates improves signal quality by reducing noise while
preserving relevant features. Common methods include thresholding, median,
Gaussian, and wavelet-based filtering.

.. GENERATED FROM PYTHON SOURCE LINES 14-15

Import required modules and functions:

.. GENERATED FROM PYTHON SOURCE LINES 15-30

.. code-block:: Python


    from phasorpy.datasets import fetch
    from phasorpy.filter import (
        phasor_filter_gaussian,
        phasor_filter_median,
        phasor_filter_pawflim,
        phasor_threshold,
        signal_filter_gaussian,
        signal_filter_median,
    )
    from phasorpy.io import signal_from_imspector_tiff
    from phasorpy.lifetime import phasor_calibrate
    from phasorpy.phasor import phasor_from_signal
    from phasorpy.plot import plot_image, plot_phasor








.. GENERATED FROM PYTHON SOURCE LINES 31-36

Calibrated phasor coordinates
-----------------------------

Read a time-correlated single photon counting (TCSPC) histogram from a file.
A homogeneous solution of Fluorescein (4.2 ns) was imaged as a reference:

.. GENERATED FROM PYTHON SOURCE LINES 36-43

.. code-block:: Python


    signal = signal_from_imspector_tiff(fetch('Embryo.tif'))
    frequency = signal.attrs['frequency']

    reference_signal = signal_from_imspector_tiff(fetch('Fluorescein_Embryo.tif'))
    assert reference_signal.attrs['frequency'] == frequency








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Calculate, calibrate, and plot the phasor coordinates:

.. GENERATED FROM PYTHON SOURCE LINES 45-58

.. code-block:: Python


    mean, real, imag = phasor_from_signal(signal, axis=0)

    reference = phasor_from_signal(reference_signal, axis=0)

    real, imag = phasor_calibrate(
        real, imag, *reference, frequency=frequency, lifetime=4.2
    )

    plot_phasor(
        real, imag, frequency=frequency, title='Calibrated phasor coordinates'
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_001.png
   :alt: Calibrated phasor coordinates
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-68

Threshold
---------

Thresholding with :py:func:`phasorpy.filter.phasor_threshold` sets phasor
coordinates to NaN (not a number) wherever the mean intensity, real or
imaginary coordinates, phase or modulation fall outside specified bounds.
Such coordinates are excluded from plots and calculations. Thresholding is
typically performed after noise filtering.
Use a minimum mean intensity to remove background:

.. GENERATED FROM PYTHON SOURCE LINES 68-75

.. code-block:: Python


    plot_phasor(
        *phasor_threshold(mean, real, imag, mean_min=1)[1:],
        frequency=frequency,
        title='Thresholded phasor coordinates',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_002.png
   :alt: Thresholded phasor coordinates
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 76-85

Median filter
-------------

Median filtering replaces each pixel value with the median of its
neighboring values, reducing noise while preserving edges.
The function :py:func:`phasorpy.filter.phasor_filter_median` applies a
median filter to phasor coordinates. Typically, applying a 3x3 kernel
once to three times is sufficient to remove noise while maintaining
important features:

.. GENERATED FROM PYTHON SOURCE LINES 85-90

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_filter_median(
        mean, real, imag, repeat=3, size=3
    )








.. GENERATED FROM PYTHON SOURCE LINES 91-92

Thresholds should be applied after noise filtering:

.. GENERATED FROM PYTHON SOURCE LINES 92-97

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        mean_filtered, real_filtered, imag_filtered, mean_min=1
    )








.. GENERATED FROM PYTHON SOURCE LINES 98-99

Plot the median-filtered and thresholded phasor coordinates:

.. GENERATED FROM PYTHON SOURCE LINES 99-107

.. code-block:: Python


    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Median-filtered phasor coordinates (3x3 kernel, 3 repetitions)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_003.png
   :alt: Median-filtered phasor coordinates (3x3 kernel, 3 repetitions)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 108-110

Increasing the number of repetitions or the filter kernel size can further
reduce noise, but may also remove relevant features:

.. GENERATED FROM PYTHON SOURCE LINES 110-122

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        *phasor_filter_median(mean, real, imag, repeat=6, size=5), mean_min=1
    )

    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Median-filtered phasor coordinates (5x5 kernel, 6 repetitions)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_004.png
   :alt: Median-filtered phasor coordinates (5x5 kernel, 6 repetitions)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 123-125

The smoothing effect of median-filtering is demonstrated by plotting the
real components of the filtered and unfiltered phasor coordinates as images:

.. GENERATED FROM PYTHON SOURCE LINES 125-135

.. code-block:: Python


    plot_image(
        phasor_threshold(mean, real, imag, mean_min=1)[1],
        real_filtered,
        vmin=0.4,
        vmax=0.9,
        labels=['Unfiltered', 'Median-filtered'],
        title='Real component of phasor coordinates',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_005.png
   :alt: Real component of phasor coordinates, Unfiltered, Median-filtered
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 136-138

For comparison, the function :py:func:`phasorpy.filter.signal_filter_median`
applies a median filter to the signal before phasor transformation:

.. GENERATED FROM PYTHON SOURCE LINES 138-158

.. code-block:: Python


    signal_filtered = signal_filter_median(signal, skip_axis=0, repeat=1, size=3)

    mean, real, imag = phasor_from_signal(signal_filtered, axis=0)

    real, imag = phasor_calibrate(
        real, imag, *reference, frequency=frequency, lifetime=4.2
    )

    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        mean, real, imag, mean_min=1
    )

    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Phasor coordinates of median-filtered signal',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_006.png
   :alt: Phasor coordinates of median-filtered signal
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 159-164

Note that the resulting phasor coordinates are displaced from the true
distribution. Signal-space filtering does not commute with the phasor
transform: for heterogeneous samples, the spatial median of neighboring
signals does not produce a physically meaningful signal.
Use :py:func:`phasorpy.filter.phasor_filter_median` instead.

.. GENERATED FROM PYTHON SOURCE LINES 166-175

Gaussian filter
---------------

Gaussian filtering replaces each pixel value with a weighted average of its
neighbors, where weights follow a Gaussian distribution.
Unlike median filtering, it is linear and smooths more gradually.
The function :py:func:`phasorpy.filter.phasor_filter_gaussian` applies a
Gaussian filter to phasor coordinates. By default, a 3x3 kernel with sigma
of about 0.8 is used:

.. GENERATED FROM PYTHON SOURCE LINES 175-197

.. code-block:: Python


    mean, real, imag = phasor_from_signal(signal, axis=0)

    real, imag = phasor_calibrate(
        real, imag, *reference, frequency=frequency, lifetime=4.2
    )

    mean_filtered, real_filtered, imag_filtered = phasor_filter_gaussian(
        mean, real, imag, repeat=3, size=3
    )

    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        mean_filtered, real_filtered, imag_filtered, mean_min=1
    )

    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Gaussian-filtered phasor coordinates (3x3 kernel, 3 repetitions)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_007.png
   :alt: Gaussian-filtered phasor coordinates (3x3 kernel, 3 repetitions)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_007.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 198-200

Increasing the number of repetitions or the kernel size can further reduce
noise, but may also blur relevant features:

.. GENERATED FROM PYTHON SOURCE LINES 200-212

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        *phasor_filter_gaussian(mean, real, imag, repeat=6, size=5), mean_min=1
    )

    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Gaussian-filtered phasor coordinates (5x5 kernel, 6 repetitions)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_008.png
   :alt: Gaussian-filtered phasor coordinates (5x5 kernel, 6 repetitions)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_008.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 213-215

The smoothing effect of Gaussian filtering is demonstrated by plotting the
real components of the filtered and unfiltered phasor coordinates as images:

.. GENERATED FROM PYTHON SOURCE LINES 215-225

.. code-block:: Python


    plot_image(
        phasor_threshold(mean, real, imag, mean_min=1)[1],
        real_filtered,
        vmin=0.4,
        vmax=0.9,
        labels=['Unfiltered', 'Gaussian-filtered'],
        title='Real component of phasor coordinates',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_009.png
   :alt: Real component of phasor coordinates, Unfiltered, Gaussian-filtered
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_009.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 226-229

For comparison, the function
:py:func:`phasorpy.filter.signal_filter_gaussian` applies a Gaussian filter
to the signal before phasor transformation:

.. GENERATED FROM PYTHON SOURCE LINES 229-249

.. code-block:: Python


    signal_filtered = signal_filter_gaussian(signal, skip_axis=0, repeat=3, size=3)

    mean, real, imag = phasor_from_signal(signal_filtered, axis=0)

    real, imag = phasor_calibrate(
        real, imag, *reference, frequency=frequency, lifetime=4.2
    )

    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        mean, real, imag, mean_min=1
    )

    plot_phasor(
        real_filtered,
        imag_filtered,
        frequency=frequency,
        title='Phasor coordinates of Gaussian-filtered signal',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_010.png
   :alt: Phasor coordinates of Gaussian-filtered signal
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_010.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 250-253

Unlike median filtering, Gaussian filtering is a linear operation, so the
phasor coordinates of the Gaussian-filtered signal are close to those
obtained by filtering the phasor coordinates directly.

.. GENERATED FROM PYTHON SOURCE LINES 255-265

pawFLIM wavelet filter
----------------------

Filtering based on wavelet decomposition is another method to reduce noise.
The function :py:func:`phasorpy.filter.phasor_filter_pawflim` is based
on the `pawFLIM <https://github.com/maurosilber/pawflim>`_ library.
While the median filter is applicable to any type of phasor coordinates,
the pawFLIM filter requires calibrated phasor coordinates from FLIM
measurements and at least one harmonic and its corresponding second harmonic
(the 1st and 2nd harmonic in this example):

.. GENERATED FROM PYTHON SOURCE LINES 265-281

.. code-block:: Python


    harmonic = [1, 2]

    mean, real, imag = phasor_from_signal(signal, axis=0, harmonic=harmonic)

    reference = phasor_from_signal(reference_signal, axis=0, harmonic=harmonic)

    real, imag = phasor_calibrate(
        real,
        imag,
        *reference,
        frequency=frequency,
        lifetime=4.2,
        harmonic=harmonic,
    )








.. GENERATED FROM PYTHON SOURCE LINES 282-283

Apply the pawFLIM wavelet filter to the calibrated phasor coordinates:

.. GENERATED FROM PYTHON SOURCE LINES 283-288

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        *phasor_filter_pawflim(mean, real, imag, harmonic=harmonic), mean_min=1
    )








.. GENERATED FROM PYTHON SOURCE LINES 289-290

Plot the pawFLIM-filtered and thresholded phasor coordinates:

.. GENERATED FROM PYTHON SOURCE LINES 290-298

.. code-block:: Python


    plot_phasor(
        real_filtered[0],
        imag_filtered[0],
        frequency=frequency,
        title='pawFLIM-filtered phasor coordinates (sigma=2, levels=1)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_011.png
   :alt: pawFLIM-filtered phasor coordinates (sigma=2, levels=1)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_011.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 299-302

Increasing the significance level ``sigma`` of the comparison between
phasor coordinates or the maximum averaging area ``levels`` can reduce noise
further:

.. GENERATED FROM PYTHON SOURCE LINES 302-318

.. code-block:: Python


    mean_filtered, real_filtered, imag_filtered = phasor_filter_pawflim(
        mean, real, imag, harmonic=harmonic, sigma=5, levels=3
    )

    mean_filtered, real_filtered, imag_filtered = phasor_threshold(
        mean_filtered, real_filtered, imag_filtered, mean_min=1
    )

    plot_phasor(
        real_filtered[0],
        imag_filtered[0],
        frequency=frequency,
        title='pawFLIM-filtered phasor coordinates (sigma=5, levels=3)',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_012.png
   :alt: pawFLIM-filtered phasor coordinates (sigma=5, levels=3)
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_012.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 319-321

Plot the real components of the filtered and unfiltered phasor coordinates
as images:

.. GENERATED FROM PYTHON SOURCE LINES 321-331

.. code-block:: Python


    plot_image(
        phasor_threshold(mean, real, imag, mean_min=1)[1],
        real_filtered,
        vmin=0.4,
        vmax=0.9,
        labels=['Unfiltered', 'pawFLIM-filtered'],
        title='Real component of phasor coordinates',
    )




.. image-sg:: /tutorials/api/images/sphx_glr_phasorpy_filter_013.png
   :alt: Real component of phasor coordinates, Unfiltered, pawFLIM-filtered
   :srcset: /tutorials/api/images/sphx_glr_phasorpy_filter_013.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 7.292 seconds)


.. _sphx_glr_download_tutorials_api_phasorpy_filter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: phasorpy_filter.ipynb <phasorpy_filter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: phasorpy_filter.py <phasorpy_filter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: phasorpy_filter.zip <phasorpy_filter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
